# fastapi-advanced-crud

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  docker_optimization_notes.md  notes.md  pyproject.toml  python_typing_notes.md
scripts/: backup.sh  deploy.sh
src/app/: main.py
src/app/core/: cache.py  config.py  database.py  decorators.py  exceptions.py  rate_limiter.py  security.py
src/app/crud/: task.py
src/app/models/: database.py  user.py
src/app/routers/: auth.py  files.py  monitoring.py  tasks.py
